added pg repos for getting test cases by task id
